# Elden-Ring-Nightreign-Save-Editor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: Final.py  build.spec  build_mac.spec  build_win32.spec  build_win64_onedir.spec  config_manager.py  inventory_handler.py  language_manager.py  relic_checker.py  source_data_handler.py  vessel_handler.py
src/Resources/locales/: messages.pot
src/Resources/locales/en_US/LC_MESSAGES/: en_US.mo  en_US.po
src/Resources/locales/zh_CN/LC_MESSAGES/: zh_CN.mo  zh_CN.po
src/Resources/locales/zh_TW/LC_MESSAGES/: zh_TW.mo  zh_TW.po
src/packer/: __init__.py  _packer.py  _pc.py  _ps.py  _registry.py  pc.py  ps.py
src/scripts/: compile_po_to_mo.py  update_po.py  update_pot.py
src/ui/: __init__.py  dialog.py  move_index_dialog.py  preset_name_dialog.py  relic_type_dialog.py  vars.py
src/utils/: backup.py
